# LASERNet

./: .env.example  .gitignore  MICROnet.ipynb  README.md  loss_curve_plot.py  makefile  microstructure_training.py  pyproject.toml  test.py  train.py
batch/scripts/: test.sh  train.sh  train_MICROnet_notebook.sh  train_lasernet_notebook.sh
lasernet/dataset/: __init__.py  calculate_temp.py  loading.py  preprocess_data.py
lasernet/micronet/: __init__.py
lasernet/micronet/dataset/: __init__.py  fast_loading.py  loading.py  preprocess_data.py
lasernet/micronet/model/: CNN_LSTM.py  MicrostructureCNN_LSTM.py  MicrostructurePredRNN.py  PredRNN.py  README.md  __init__.py  losses.py
lasernet/micronet/train/: trainer.py
lasernet/micronet/utils/: __init__.py  device.py  plot.py  visualize.py
lasernet/model/: CNN_LSTM.py
lasernet/utils/: __init__.py  plot.py  visualize.py
notebooks/: MICROnet.ipynb  data-loading-demo.ipynb  lasernet.ipynb  temperature-prediction.ipynb
src/: main.py
src/dataset/: __init__.py  loading.py
